fixed tags collapsed view for mobile devices

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -28,12 +28,6 @@ $progress-bar-bg: $color-primary;
 .content {
   margin: 50px auto;
 
-  .collapse-btn {
-    visibility: hidden;
-    padding: 0;
-    margin: 0;
-  }
-
   .tags-array {
     padding: 0;
     display: flex;
@@ -84,24 +78,21 @@ $progress-bar-bg: $color-primary;
     }
   }
 
-  @media (max-width: 768px) {
-    .collapse-tags {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+  .collapse-tags {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-      .collapse-btn {
-        visibility: visible;
-        background-color: $color-secondary;
-        margin: 0 auto;
-        color: #fff;
-        font-weight: bold;
-        padding: 5px 15px;
-        border: none;
-        border-radius: 20px;
-        width: 200px;
-        margin-bottom: 20px;
-      }
+    .collapse-btn {
+      background-color: $color-secondary;
+      margin: 0 auto;
+      color: #fff;
+      font-weight: bold;
+      padding: 5px 15px;
+      border: none;
+      border-radius: 20px;
+      width: 200px;
+      margin-bottom: 20px;
     }
 
     .tags-array {
